Rely on module org.junit.platform.launcher's API
Revert super-powered command-line options.