@@ -120,10 +120,7 @@ class ModularUserGuideTests {
 		));
 
 		command.add("--add-modules");
-		command.add("documentation,jdk.jfr");
-
-		command.add("--add-reads");
-		command.add("org.junit.platform.launcher=jdk.jfr");
+		command.add("documentation");
 
 		// TODO This `patch-module` should work! Why doesn't it?
 		// command.add("--patch-module");
